<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/content_horizontal_margin"
        android:layout_marginRight="@dimen/content_horizontal_margin">


        <android.support.v7.widget.CardView
            android:id="@+id/synopsis_card"
            style="@style/card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/synopsis_title"
                    style="@style/cardHeaderMediumText"
                    android:text="@string/synopsis" />

                <TextView
                    android:id="@+id/synopsis"
                    style="@style/cardContent" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/release_date_card"
                style="@style/card"
                android:layout_weight="1"
                android:layout_width="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date_title"
                        style="@style/cardHeaderMediumText"
                        android:text="@string/release_date" />

                    <TextView
                        android:id="@+id/release_date"
                        style="@style/cardContent" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="@dimen/card_horizontal_spacing"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/votes_card"
                style="@style/card"
                android:layout_weight="1"
                android:layout_width="0dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/vote_average_title"
                        style="@style/cardHeaderMediumText"
                        android:text="@string/score_title" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/vote_average"
                            style="@style/cardContent"
                            android:layout_width="wrap_content"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/vote_count"
                            style="@style/cardContent"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right|center_vertical" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>