<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/review_card"
        style="@style/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/reviewAuthor"
                style="@style/cardHeader"/>


            <TextView
                android:id="@+id/reviewContent"
                style="@style/cardContent">
            </TextView>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>