...
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/ribbon"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAppearance="?android:textAppearanceLarge"/>
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <android.support.v4.view.ViewPager
            android:id="@+id/details_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.PagerTabStrip
                android:id="@+id/pager_title_strip"
                android:layout_width="match_parent"
...
